--- a/ms-enset/ecom-web-app/src/app/order-details/order-details.component.html
+++ b/ms-enset/ecom-web-app/src/app/order-details/order-details.component.html
@@ -21,7 +21,7 @@
       <div class="card-body">
         <table class="table table-sm">
           <thead>
-            <tr class="bg-dark text-white">
+            <tr cclass="bg-dark text-white">
               <th>Product ID</th><th>Product Name</th><th>Quantity</th><th>Price</th><th>Discount</th><th>Amount</th>
             </tr>
           </thead>
