--- a/ms-enset/ecom-web-app/src/app/app.component.html
+++ b/ms-enset/ecom-web-app/src/app/app.component.html
@@ -9,11 +9,11 @@
         <a class="nav-link" routerLink="/customers">Customers</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Home</a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Link</a></li>
-          <li><a class="dropdown-item" href="#">Another link</a></li>
-          <li><a class="dropdown-item" href="#">A third link</a></li>
+          <li><a class="dropdown-item" href="#">Customers</a></li>
+          <li><a class="dropdown-item" href="#">Products</a></li>
+          <li><a class="dropdown-item" href="#">Orders</a></li>
         </ul>
       </li>
     </ul>
