--- a/ms-enset/ecom-web-app/src/app/customers/customers.component.html
+++ b/ms-enset/ecom-web-app/src/app/customers/customers.component.html
@@ -1,15 +1,20 @@
 <div class="container">
-  <table class="table" *ngIf="customers">
-    <thead>
+  <table class="table table-striped table-bordered custom-table" *ngIf="customers">
+    <thead class="custom-header">
     <tr>
-      <th>ID</th><th>Name</th><th>Email</th>
+      <th class="custom-text custom-header-cell-background">ID</th>
+      <th class="custom-text custom-header-cell-background">Name</th>
+      <th class="custom-text custom-header-cell-background">Email</th>
+      <th class="custom-text custom-header-cell-background">Actions</th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let c of customers._embedded.customers">
-      <td>{{c.id}}</td><td>{{c.name}}</td><td>{{c.email}}</td>
+      <td class="custom-text">{{c.id}}</td>
+      <td class="custom-text">{{c.name}}</td>
+      <td class="custom-text">{{c.email}}</td>
       <td>
-        <button class="btn btn-success" (click)="getOreders(c)">Orders</button>
+        <button class="custom-button" (click)="getOreders(c)">Orders</button>
       </td>
     </tr>
     </tbody>
